--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -32,7 +32,7 @@
             </div>
             
             <button type="submit"
-                    class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300">
+                    class="w-full bg-resergol-600 hover:bg-resergol-700 text-white font-bold py-3 px-4 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300">
                 Entrar
             </button>
         </form>
