--- a/App/templates/quadras/cadastrar.html
+++ b/App/templates/quadras/cadastrar.html
@@ -18,13 +18,13 @@
             <select id="tipo" name="tipo" required
                     class="w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
                 <option value="">Selecione o tipo...</option>
-                <option value="futebol">⚽ Futebol</option>
-                <option value="futsal">🥅 Futsal</option>
-                <option value="society">🏟️ Society</option>
-                <option value="tenis">🎾 Tênis</option>
-                <option value="basquete">🏀 Basquete</option>
-                <option value="volei">🏐 Vôlei</option>
-                <option value="beach_tennis">🏖️ Beach Tennis</option>
+                <option value="futebol">Futebol</option>
+                <option value="futsal">Futsal</option>
+                <option value="society">Society</option>
+                <option value="tenis">Tênis</option>
+                <option value="basquete">Basquete</option>
+                <option value="volei">Vôlei</option>
+                <option value="beach_tennis">Beach Tennis</option>
             </select>
         </div>
         
