--- a/App/templates/quadras/listar.html
+++ b/App/templates/quadras/listar.html
@@ -40,7 +40,7 @@
                     </p>
                     
                     <a href="{{ url_for('reservar_quadra', quadra_id=quadra.id) }}" 
-                       class="block w-full text-center bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition duration-200">
+                       class="block w-full text-center bg-resergol-600 hover:bg-resergol-700 text-white font-medium py-2 px-4 rounded-lg transition duration-200">
                         Reservar Agora
                     </a>
                 </div>
