--- a/App/templates/quadras/reservas_quadra.html
+++ b/App/templates/quadras/reservas_quadra.html
@@ -44,7 +44,7 @@
             
             <div class="flex items-end gap-2">
                 <button type="submit"
-                        class="flex-1 bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded-lg transition">
+                        class="flex-1 bg-resergol-600 hover:bg-resergol-700 text-white font-medium py-2 px-4 rounded-lg transition">
                     Filtrar
                 </button>
                 <a href="{{ url_for('ver_reservas_quadra', quadra_id=quadra.id) }}"
